Add Netlify configuration and SEO optimizations for deployment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Midas Lifestyle - Bespoke luxury rentals of exotic cars, superyachts, private jets, and exclusive estates in Dubai, Miami, and beyond. Curated for the elite.">
+    <meta name="keywords" content="luxury rentals, exotic cars, superyachts, private jets, exclusive estates, Dubai, Miami, Bugatti, yacht charter, luxury lifestyle">
+    <meta name="author" content="Midas Lifestyle">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://midasthelifestyle.netlify.app/">
+    <meta property="og:title" content="Midas Lifestyle - Bespoke Luxury Rentals">
+    <meta property="og:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
+    <meta property="og:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://midasthelifestyle.netlify.app/">
+    <meta property="twitter:title" content="Midas Lifestyle - Bespoke Luxury Rentals">
+    <meta property="twitter:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
+    <meta property="twitter:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
     <title>Midas Lifestyle - Bespoke Luxury Rentals</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
