--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Midas Lifestyle - Bespoke luxury rentals of exotic cars, superyachts, private jets, and exclusive estates in Dubai, Miami, and beyond. Curated for the elite.">
-    <meta name="keywords" content="luxury rentals, exotic cars, superyachts, private jets, exclusive estates, Dubai, Miami, Bugatti, yacht charter, luxury lifestyle">
-    <meta name="author" content="Midas Lifestyle">
+    <meta name="description" content="Mida - Bespoke luxury rentals of exotic cars, superyachts, private jets, and exclusive estates in Dubai, Washington DC, Atlanta, and beyond. Curated for the elite.">
+    <meta name="keywords" content="luxury rentals, exotic cars, superyachts, private jets, exclusive estates, Dubai, Washington DC, Atlanta, Maryland, Northern Virginia, Bugatti, yacht charter, luxury lifestyle">
+    <meta name="author" content="Mida">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://midasthelifestyle.netlify.app/">
-    <meta property="og:title" content="Midas Lifestyle - Bespoke Luxury Rentals">
+    <meta property="og:title" content="Mida - Bespoke Luxury Rentals">
     <meta property="og:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
     <meta property="og:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://midasthelifestyle.netlify.app/">
-    <meta property="twitter:title" content="Midas Lifestyle - Bespoke Luxury Rentals">
+    <meta property="twitter:title" content="Mida - Bespoke Luxury Rentals">
     <meta property="twitter:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
     <meta property="twitter:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
 
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-    <title>Midas Lifestyle - Bespoke Luxury Rentals</title>
+    <title>Mida - Bespoke Luxury Rentals</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -36,7 +36,7 @@
     <!-- Navigation -->
     <nav class="bg-black text-white p-4 sticky top-0 z-50 backdrop-blur-md">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-3xl font-bold font-['Playfair_Display'] gold-accent">Midas Lifestyle</a>
+            <a href="#" class="text-3xl font-bold font-['Playfair_Display'] gold-accent">Mida</a>
             <div class="space-x-6">
                 <a href="#home" class="hover:text-[#D4AF37] transition-colors">Home</a>
                 <a href="#cars" class="hover:text-[#D4AF37] transition-colors">Exotic Cars</a>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="container mx-auto text-center hero-content z-10">
-            <h1 class="text-6xl font-bold mb-4">Midas Lifestyle: Touch of Gold</h1>
+            <h1 class="text-6xl font-bold mb-4">Mida: Touch of Gold</h1>
             <p class="text-2xl mb-8 max-w-2xl mx-auto">Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.</p>
             <button onclick="openModal()" class="bg-[#D4AF37] text-black px-8 py-4 rounded-lg hover:bg-[#E8C96A] transition-colors text-lg">Request a VVIP Consultation</button>
         </div>
@@ -248,9 +248,9 @@
     <!-- About Section -->
     <section id="about" class="py-20 section-bg">
         <div class="container mx-auto px-4 fade-in">
-            <h2 class="text-4xl font-bold text-center mb-12 gold-accent">About Midas Lifestyle</h2>
+            <h2 class="text-4xl font-bold text-center mb-12 gold-accent">About Mida</h2>
             <p class="text-lg text-white max-w-3xl mx-auto">
-                Midas Lifestyle redefines luxury with bespoke rentals of exotic cars, superyachts, private jets, and exclusive estates. Operating in Dubai, Miami, and beyond, our VVIP concierge team crafts unparalleled experiences for the world's elite, where every detail glimmers with the touch of gold.
+                Mida redefines luxury with bespoke rentals of exotic cars, superyachts, private jets, and exclusive estates. Operating in Dubai, Washington DC, Maryland, Northern Virginia, Atlanta, and beyond, our VVIP concierge team crafts unparalleled experiences for the world's elite, where every detail glimmers with the touch of gold.
             </p>
         </div>
     </section>
@@ -290,8 +290,9 @@
                 <input type="text" name="honeypot" style="position: absolute; left: -9999px; opacity: 0;" tabindex="-1" autocomplete="off">
             </form>
             <div class="mt-12 text-center">
-                <p class="text-white">Midas Lifestyle, Office #22, JAC Building, Al Quoz 1, Dubai</p>
-                <p class="text-white">Phone: +971 123 456 789 | Email: concierge@midaslifestyle.com</p>
+                <p class="text-white">Mida - Luxury Rentals</p>
+                <p class="text-white">Dubai | Washington DC | Atlanta | Maryland | Northern Virginia</p>
+                <p class="text-white">Phone: +971 123 456 789 | Email: concierge@mida.com</p>
             </div>
         </div>
     </section>
@@ -313,7 +314,10 @@
                     <label for="modal-location" class="block text-sm font-medium mb-2">Location</label>
                     <select id="modal-location" class="w-full p-3 rounded-lg bg-black text-white border border-[#D4AF37]" required>
                         <option value="dubai">Dubai</option>
-                        <option value="miami">Miami</option>
+                        <option value="washington-dc">Washington DC</option>
+                        <option value="maryland">Maryland</option>
+                        <option value="northern-virginia">Northern Virginia</option>
+                        <option value="atlanta">Atlanta, GA</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
@@ -328,7 +332,7 @@
     <!-- Footer -->
     <footer class="bg-black text-white p-6">
         <div class="container mx-auto text-center">
-            <p class="text-white">© 2025 Midas Lifestyle. All rights reserved.</p>
+            <p class="text-white">© 2025 Mida. All rights reserved.</p>
             <div class="mt-4">
                 <a href="#" class="text-[#D4AF37] hover:underline mx-3">Facebook</a>
                 <a href="#" class="text-[#D4AF37] hover:underline mx-3">Instagram</a>
