Phase 3B: Advanced Business Features - Complete Implementation
🚀 MAJOR FEATURES IMPLEMENTED:

📅 Booking Calendar System:
- Real-time availability checking with conflict prevention
- Interactive calendar with date range selection
- Dynamic pricing calculations with taxes and deposits
- Location-specific availability for all markets (Dubai, DC, Atlanta, MD, VA)
- Mobile-responsive calendar interface
- Integration with inventory management system

💳 Payment Integration:
- Stripe payment processing with secure card handling
- PayPal integration as alternative payment method
- Real-time payment intent creation and confirmation
- Invoice generation and receipt handling
- Payment status tracking and error handling
- Security badges and SSL encryption indicators

👤 User Authentication System:
- Complete user registration and login functionality
- Customer dashboard with booking history and favorites
- Profile management and preferences
- Secure session management with localStorage
- User menu with dropdown navigation
- Password validation and security features

🔗 System Integration:
- Seamless flow from calendar to payment to confirmation
- Enhanced reservation buttons now open booking calendar
- Dynamic content loading from inventory database
- Real-time currency switching (AED/USD)
- Automated email confirmations for bookings
- VVIP concierge notifications for new bookings

🎨 Enhanced UI/UX:
- Luxury-themed loading states and animations
- Professional payment forms with validation
- Mobile-responsive design for all new components
- Consistent black/gold luxury aesthetic
- Interactive notifications and success messages
- Smooth transitions and hover effects

📧 Backend Functions:
- Booking confirmation email system
- Customer and concierge notification templates
- Enhanced form validation and security
- Rate limiting and spam protection
- Error handling and fallback systems

🔧 Technical Improvements:
- Modular JavaScript architecture
- Stripe.js integration for secure payme

--- a/index.html
+++ b/index.html
@@ -341,7 +341,19 @@
         </div>
     </footer>
 
+    <!-- Stripe.js for payment processing -->
+    <script src="https://js.stripe.com/v3/"></script>
+
+    <!-- Swiper.js for sliders -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Mida Luxury Systems -->
+    <script src="utils/placeholderGenerator.js"></script>
+    <script src="utils/imageOptimizer.js"></script>
+    <script src="utils/contentManager.js"></script>
+    <script src="utils/bookingCalendar.js"></script>
+    <script src="utils/paymentSystem.js"></script>
+    <script src="utils/userAuth.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
