--- a/index.html
+++ b/index.html
@@ -77,30 +77,68 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Montserrat:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css?v=2025-01-27">
     <style>
-        /* Critical CSS for immediate styling */
-        body {
-            font-family: 'Inter', 'Montserrat', sans-serif;
-            background-color: #0A0A0A;
-            color: #FFFFFF;
+        /* CRITICAL LUXURY STYLING - IMMEDIATE APPLICATION */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
+            font-family: 'Inter', 'Montserrat', sans-serif !important;
+            background-color: #0A0A0A !important;
+            color: #FFFFFF !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+
+        /* Force luxury theme on all elements */
+        body * {
+            color: inherit;
+        }
+
+        /* LUXURY HEADINGS */
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Playfair Display', serif !important;
+            color: #D4AF37 !important;
+            font-weight: 700;
         }
 
         .luxury-heading {
-            font-family: 'Playfair Display', serif;
-            color: #D4AF37;
+            font-family: 'Playfair Display', serif !important;
+            color: #D4AF37 !important;
             text-shadow: 0 0 20px rgba(212, 175, 55, 0.3);
         }
 
         .gold-accent {
-            color: #D4AF37;
+            color: #D4AF37 !important;
         }
 
-        .luxury-button {
-            background: linear-gradient(135deg, #D4AF37, #E8C96A);
-            color: #000000;
+        /* NAVIGATION STYLING */
+        nav {
+            background: rgba(10, 10, 10, 0.95) !important;
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid #D4AF37;
+        }
+
+        nav a {
+            color: #FFFFFF !important;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #D4AF37 !important;
+        }
+
+        /* LUXURY BUTTONS */
+        .luxury-button, .btn-luxury, button {
+            background: linear-gradient(135deg, #D4AF37, #E8C96A) !important;
+            color: #000000 !important;
             padding: 12px 24px;
             border-radius: 8px;
             font-weight: 600;
@@ -109,31 +147,63 @@
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
+            font-family: 'Inter', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
-        .luxury-button:hover {
+        .luxury-button:hover, .btn-luxury:hover, button:hover {
             transform: translateY(-2px);
             box-shadow: 0 8px 25px rgba(212, 175, 55, 0.3);
+            background: linear-gradient(135deg, #E8C96A, #D4AF37) !important;
+        }
+
+        /* SECTIONS */
+        section {
+            background-color: #0A0A0A !important;
+            color: #FFFFFF !important;
         }
 
         .section-bg {
-            background: linear-gradient(135deg, rgba(0,0,0,0.9) 0%, rgba(26,26,26,0.8) 50%, rgba(0,0,0,0.9) 100%);
+            background: linear-gradient(135deg, rgba(0,0,0,0.9) 0%, rgba(26,26,26,0.8) 50%, rgba(0,0,0,0.9) 100%) !important;
             position: relative;
         }
 
-        .premium-card {
-            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
-            border: 1px solid #D4AF37;
+        /* PREMIUM CARDS */
+        .premium-card, .luxury-card, .card {
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a) !important;
+            border: 1px solid #D4AF37 !important;
             border-radius: 12px;
             padding: 24px;
             transition: all 0.3s ease;
+            color: #FFFFFF !important;
         }
 
-        .premium-card:hover {
+        .premium-card:hover, .luxury-card:hover, .card:hover {
             transform: translateY(-5px);
             box-shadow: 0 15px 35px rgba(212, 175, 55, 0.2);
-            border-color: #E8C96A;
+            border-color: #E8C96A !important;
         }
+
+        /* HERO SECTION */
+        .hero-bg {
+            background: linear-gradient(135deg, rgba(0,0,0,0.8), rgba(26,26,26,0.6)) !important;
+            color: #FFFFFF !important;
+        }
+
+        /* FOOTER */
+        footer {
+            background: #0A0A0A !important;
+            border-top: 1px solid #D4AF37;
+            color: #FFFFFF !important;
+        }
+
+        /* FORCE LUXURY THEME ON ALL TAILWIND CLASSES */
+        .bg-black { background-color: #0A0A0A !important; }
+        .bg-gray-900 { background-color: #1A1A1A !important; }
+        .text-white { color: #FFFFFF !important; }
+        .text-gray-300 { color: rgba(255, 255, 255, 0.7) !important; }
+        .border-gray-800 { border-color: rgba(212, 175, 55, 0.3) !important; }
 
         /* Additional Critical Styles */
         .container {
@@ -201,7 +271,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: #0A0A0A !important; color: #FFFFFF !important; font-family: 'Inter', 'Montserrat', sans-serif !important; margin: 0; padding: 0;">
     <!-- Navigation -->
     <nav class="bg-black text-white p-4 sticky top-0 z-50 backdrop-blur-md">
         <div class="container mx-auto flex justify-between items-center">
