fix: Restore full luxury website with corrected Washington, DC formatting
✅ LUXURY STYLING FIXES:
- Restored complete website content with embedded luxury CSS
- Maintained working black/gold theme from successful deployment
- Premium card designs and navigation styling intact

✅ WASHINGTON DC FORMATTING CORRECTIONS:
- Updated all instances of 'Washington DC' to 'Washington, DC' (proper comma)
- Fixed meta descriptions and keywords
- Corrected service location listings
- Updated contact information sections
- Fixed footer content references
- Corrected booking form location options
- Updated about section location text

✅ PRODUCTION DEPLOYMENT:
- Full content restored while maintaining luxury black/gold theme
- All 9 phases of development features included
- Responsive design and functionality preserved
- SEO and PWA features maintained

Production site will now display complete luxury website with proper formatting

--- a/index-backup.html
+++ b/index-backup.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Midas The Lifestyle - Bespoke luxury rentals of exotic cars, superyachts, private jets, and exclusive estates in Dubai, Washington DC, Atlanta, and beyond. Curated for the elite.">
-    <meta name="keywords" content="luxury rentals, exotic cars, superyachts, private jets, exclusive estates, Dubai, Washington DC, Houston TX, Atlanta, Maryland, Northern Virginia, Bugatti, yacht charter, luxury lifestyle">
+    <meta name="description" content="Midas The Lifestyle - Bespoke luxury rentals of exotic cars, superyachts, private jets, and exclusive estates in Dubai, Washington, DC, Atlanta, and beyond. Curated for the elite.">
+    <meta name="keywords" content="luxury rentals, exotic cars, superyachts, private jets, exclusive estates, Dubai, Washington, DC, Houston TX, Atlanta, Maryland, Northern Virginia, Bugatti, yacht charter, luxury lifestyle">
     <meta name="author" content="Midas The Lifestyle">
     <meta name="robots" content="index, follow">
 
@@ -964,7 +964,7 @@
                     </div>
                     <ul class="text-gray-300 space-y-1 mb-4 text-sm">
                         <li>• Dubai & UAE Coverage</li>
-                        <li>• Washington DC Metro</li>
+                        <li>• Washington, DC Metro</li>
                         <li>• Northern Virginia</li>
                         <li>• Maryland & Atlanta</li>
                     </ul>
@@ -1078,7 +1078,7 @@
                                     <span class="text-[#D4AF37]">Full Coverage</span>
                                 </div>
                                 <div class="flex justify-between">
-                                    <span>Washington DC Metro</span>
+                                    <span>Washington, DC Metro</span>
                                     <span class="text-[#D4AF37]">50-mile radius</span>
                                 </div>
                                 <div class="flex justify-between">
@@ -1158,7 +1158,7 @@
         <div class="container mx-auto px-4 fade-in">
             <h2 class="text-4xl font-bold text-center mb-12 gold-accent">About Midas The Lifestyle</h2>
             <p class="text-lg text-white max-w-3xl mx-auto">
-                Midas The Lifestyle redefines luxury with bespoke rentals of exotic cars, superyachts, private jets, and exclusive estates. Operating in Dubai, Washington DC, Houston TX, Maryland, Northern Virginia, Atlanta, and beyond, our VVIP concierge team crafts unparalleled experiences for the world's elite, where every detail glimmers with the touch of gold.
+                Midas The Lifestyle redefines luxury with bespoke rentals of exotic cars, superyachts, private jets, and exclusive estates. Operating in Dubai, Washington, DC, Houston TX, Maryland, Northern Virginia, Atlanta, and beyond, our VVIP concierge team crafts unparalleled experiences for the world's elite, where every detail glimmers with the touch of gold.
             </p>
         </div>
     </section>
@@ -1348,7 +1348,7 @@
             </form>
             <div class="mt-12 text-center">
                 <p class="text-white">Midas The Lifestyle - Luxury Rentals</p>
-                <p class="text-white">Dubai | Washington DC | Houston TX | Atlanta | Maryland | Northern Virginia</p>
+                <p class="text-white">Dubai | Washington, DC | Houston TX | Atlanta | Maryland | Northern Virginia</p>
                 <p class="text-white">Phone: +971 123 456 789 | Email: concierge@midasthelifestyle.com</p>
             </div>
         </div>
@@ -1371,7 +1371,7 @@
                     <label for="modal-location" class="block text-sm font-medium mb-2">Location</label>
                     <select id="modal-location" class="w-full p-3 rounded-lg bg-black text-white border border-[#D4AF37]" required>
                         <option value="dubai">Dubai</option>
-                        <option value="washington-dc">Washington DC</option>
+                        <option value="washington-dc">Washington, DC</option>
                         <option value="maryland">Maryland</option>
                         <option value="northern-virginia">Northern Virginia</option>
                         <option value="atlanta">Atlanta, GA</option>
@@ -1499,7 +1499,7 @@
                             </li>
                             <li class="flex items-center">
                                 <span class="w-2 h-2 bg-[#D4AF37] rounded-full mr-2"></span>
-                                Washington DC
+                                Washington, DC
                             </li>
                             <li class="flex items-center">
                                 <span class="w-2 h-2 bg-[#D4AF37] rounded-full mr-2"></span>
@@ -1546,7 +1546,7 @@
                                     <a href="tel:+12403510511" class="text-gray-300 hover:text-[#D4AF37] transition-colors font-medium">
                                         +1 240 351 0511
                                     </a>
-                                    <span class="footer-location-label text-gray-500">USA • Washington DC - serves all US locations</span>
+                                    <span class="footer-location-label text-gray-500">USA • Washington, DC - serves all US locations</span>
                                 </div>
                             </div>
                             <div class="flex items-center">
