--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Montserrat:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./styles.css?v=2025-01-27">
+    <link rel="stylesheet" href="./styles.css?v=2025-01-27-final">
     <style>
         /* CRITICAL LUXURY STYLING - IMMEDIATE APPLICATION */
         * {
@@ -267,6 +267,48 @@
         /* Hero section fixes */
         .hero-section {
             background: linear-gradient(135deg, rgba(0,0,0,0.9), rgba(26,26,26,0.8)) !important;
+            color: #FFFFFF !important;
+        }
+
+        /* FORCE STYLING ON ALL ELEMENTS */
+        * {
+            box-sizing: border-box !important;
+        }
+
+        body, html {
+            background: #0A0A0A !important;
+            color: #FFFFFF !important;
+        }
+
+        /* Override any default styles */
+        div, section, article, main {
+            background-color: inherit !important;
+            color: inherit !important;
+        }
+
+        /* Ensure headings are gold */
+        h1, h2, h3, h4, h5, h6, .luxury-heading, .gold-accent {
+            color: #D4AF37 !important;
+            font-family: 'Playfair Display', serif !important;
+        }
+
+        /* Force button styling */
+        button, .luxury-button, .btn-luxury {
+            background: linear-gradient(135deg, #D4AF37, #E8C96A) !important;
+            color: #000000 !important;
+            border: none !important;
+            padding: 12px 24px !important;
+            border-radius: 8px !important;
+            font-weight: 600 !important;
+            cursor: pointer !important;
+            transition: all 0.3s ease !important;
+        }
+
+        /* Force card styling */
+        .card, .premium-card, .luxury-card {
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a) !important;
+            border: 1px solid #D4AF37 !important;
+            border-radius: 12px !important;
             color: #FFFFFF !important;
         }
     </style>
