feat: Configure custom domain deployment for midasthelifestyle.com
✅ CUSTOM DOMAIN CONFIGURATION:
- Updated netlify.toml with custom domain optimizations
- Added security headers and performance caching
- Configured HTTPS redirects and domain canonicalization
- Enhanced SSL security with HSTS headers

✅ SEO AND META TAG UPDATES:
- Updated canonical URL to midasthelifestyle.com
- Modified Open Graph URLs for custom domain
- Updated Twitter card URLs for proper social sharing
- Enhanced meta tags for SEO optimization

✅ SITEMAP AND ROBOTS.TXT:
- Updated sitemap base URL to custom domain
- Modified robots.txt sitemap reference
- Optimized for search engine indexing

✅ COMPREHENSIVE DOCUMENTATION:
- Created complete DNS configuration guide
- Added provider-specific setup instructions
- Included verification and troubleshooting steps
- Provided timeline expectations and success criteria

✅ DEPLOYMENT OPTIMIZATION:
- Enhanced caching strategies for performance
- Added security headers for production
- Configured proper redirects for SEO
- Optimized for luxury brand presentation

Ready for custom domain deployment to midasthelifestyle.com

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <meta name="author" content="Midas The Lifestyle">
     <meta name="robots" content="index, follow">
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://midasthelifestyle.com/">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://midasthelifestyle.netlify.app/">
+    <meta property="og:url" content="https://midasthelifestyle.com/">
     <meta property="og:title" content="Midas The Lifestyle - Bespoke Luxury Rentals">
     <meta property="og:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
-    <meta property="og:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
+    <meta property="og:image" content="https://midasthelifestyle.com/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://midasthelifestyle.netlify.app/">
+    <meta property="twitter:url" content="https://midasthelifestyle.com/">
     <meta property="twitter:title" content="Midas The Lifestyle - Bespoke Luxury Rentals">
     <meta property="twitter:description" content="Curated rentals of exotic cars, superyachts, private jets, and exclusive estates for the world's elite.">
-    <meta property="twitter:image" content="https://midasthelifestyle.netlify.app/og-image.jpg">
+    <meta property="twitter:image" content="https://midasthelifestyle.com/og-image.jpg">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
