feat: PWA installation prompt fixes and production domain deployment
🔧 PWA INSTALLATION PROMPT FIXES:
- Fixed 'App Installed Successfully' message appearing on page load
- Created proper install prompt banner with luxury black/gold styling
- Added intelligent install prompt timing (5 seconds after page load)
- Implemented user preference memory (24-hour dismiss period)
- Enhanced install banner with better messaging and visual design
- Added comprehensive CSS styling for install prompts and notifications

📱 PWA ENHANCEMENTS:
- Improved install button placement and styling
- Added proper install success notification (only after actual installation)
- Enhanced mobile responsiveness for install prompts
- Added haptic feedback and touch optimizations
- Improved standalone mode detection and handling

🌐 PRODUCTION DOMAIN DEPLOYMENT:
- Updated all canonical URLs to point to https://midasthelifestyle.com
- Enhanced Open Graph meta tags for production domain
- Updated fleet-details.html and property-details.html with production URLs
- Maintained Netlify configuration for custom domain deployment
- Added proper site name and type meta tags

🎨 LUXURY DESIGN CONSISTENCY:
- Install prompts match luxury black/gold aesthetic
- Smooth animations and transitions for install UI
- Professional messaging for elite clientele
- Responsive design for all device types
- Maintained brand standards throughout PWA experience

✅ TECHNICAL ACHIEVEMENTS:
- Intelligent install prompt detection and timing
- User preference persistence with localStorage
- Proper PWA lifecycle management
- Enhanced mobile app experience
- Production-ready domain configuration

Ready for deployment to https://midasthelifestyle.com with enhanced PWA functionality

--- a/fleet-details.html
+++ b/fleet-details.html
@@ -19,12 +19,14 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#D4AF37">
     <link rel="canonical" href="https://midasthelifestyle.com/fleet-details">
-    
+
     <!-- Open Graph -->
     <meta property="og:title" content="Luxury Fleet Details - Midas The Lifestyle">
     <meta property="og:description" content="Explore our exclusive luxury vehicle fleet with detailed specifications and instant booking.">
     <meta property="og:image" content="https://midasthelifestyle.com/images/fleet-hero.jpg">
     <meta property="og:url" content="https://midasthelifestyle.com/fleet-details">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Midas The Lifestyle">
     
     <style>
         :root {
