--- a/property-details.html
+++ b/property-details.html
@@ -19,12 +19,14 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#D4AF37">
     <link rel="canonical" href="https://midasthelifestyle.com/property-details">
-    
+
     <!-- Open Graph -->
     <meta property="og:title" content="Exclusive Estate Properties - Midas The Lifestyle">
     <meta property="og:description" content="Discover our portfolio of exclusive luxury estates and premium rental properties.">
     <meta property="og:image" content="https://midasthelifestyle.com/images/property-hero.jpg">
     <meta property="og:url" content="https://midasthelifestyle.com/property-details">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Midas The Lifestyle">
     
     <style>
         :root {
