--- a/index.html
+++ b/index.html
@@ -516,6 +516,191 @@
                 margin: 10px !important;
             }
         }
+
+        /* PWA Install Banner Styles */
+        .install-banner {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            right: 20px;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            border: 2px solid #D4AF37;
+            border-radius: 16px;
+            padding: 20px;
+            z-index: 10000;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            animation: slideUp 0.3s ease-out;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(100%);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .install-banner-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 15px;
+        }
+
+        .install-banner .install-icon {
+            color: #D4AF37;
+            flex-shrink: 0;
+        }
+
+        .install-banner .install-text h3 {
+            color: #D4AF37;
+            font-size: 16px;
+            font-weight: 600;
+            margin: 0 0 4px 0;
+        }
+
+        .install-banner .install-text p {
+            color: #ccc;
+            font-size: 14px;
+            margin: 0;
+        }
+
+        .install-banner .install-actions {
+            display: flex;
+            gap: 10px;
+            flex-shrink: 0;
+        }
+
+        .install-btn-primary {
+            background: linear-gradient(135deg, #D4AF37, #E8C96A);
+            color: #000;
+            border: none;
+            padding: 10px 16px;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            transition: all 0.3s ease;
+        }
+
+        .install-btn-primary:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(212, 175, 55, 0.3);
+        }
+
+        .install-btn-secondary {
+            background: transparent;
+            color: #ccc;
+            border: 1px solid #666;
+            padding: 10px 16px;
+            border-radius: 8px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .install-btn-secondary:hover {
+            color: #D4AF37;
+            border-color: #D4AF37;
+        }
+
+        .pwa-install-button {
+            background: linear-gradient(135deg, #D4AF37, #E8C96A);
+            color: #000;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 6px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .pwa-install-button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(212, 175, 55, 0.3);
+        }
+
+        .pwa-install-floating {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 9999;
+            border-radius: 50px;
+            padding: 12px 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .install-success-notification {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            border: 2px solid #4ade80;
+            border-radius: 12px;
+            padding: 16px;
+            z-index: 10001;
+            color: #fff;
+            animation: slideDown 0.3s ease-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                transform: translateY(-100%);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .install-success-notification .success-icon {
+            color: #4ade80;
+        }
+
+        .install-success-notification h3 {
+            margin: 0 0 4px 0;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .install-success-notification p {
+            margin: 0;
+            font-size: 14px;
+            color: #ccc;
+        }
+
+        @media (max-width: 768px) {
+            .install-banner {
+                left: 10px;
+                right: 10px;
+                bottom: 10px;
+            }
+
+            .install-banner-content {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 12px;
+            }
+
+            .install-banner .install-actions {
+                width: 100%;
+                justify-content: space-between;
+            }
+
+            .install-btn-primary,
+            .install-btn-secondary {
+                flex: 1;
+                justify-content: center;
+            }
+        }
     </style>
 </head>
 <body style="background-color: #0A0A0A !important; color: #FFFFFF !important; font-family: 'Inter', 'Montserrat', sans-serif !important; margin: 0; padding: 0;">
